# CVFirstPrinciples

./: .gitignore  CMakeLists.txt  GaussianFilter.cpp  GaussianFilter.h  ImgOps.cpp  ImgOps.h  README.md  enhancements.cpp  enhancements.h  imgOps.cpp  imgOps.h  main.cpp  rotate.cpp  rotate.h  scale.cpp  scale.h  similarity.cpp  similarity.h  translate.cpp  translate.h
BasicOps/: ImgOps.cpp  ImgOps.h  Source.cpp  Source.h  rotation.cpp  translation.cpp
